--- a/style.css
+++ b/style.css
@@ -1,28 +1,84 @@
-html {
-    font-size: 20px;
+#top {
+    width: 800px;
+    background-color: #dcc9f4;
+    margin: 20px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
-body {
-    font-family: "Arial", "Meiryo", sans-serif;
+.top-child {
+    font-size: 20%;
     text-align: center;
 }
 
-h1 {
-    border-bottom: 3px solid rgb(115, 115, 114);
-    font-family: "Josefin Sans", sans-serif;
-    font-size: 2rem;
-    letter-spacing: 1.2em;
-    text-shadow: 1px 1px 2px gray;
+p {
+    background-color: #ffd9df;
+    display: inline-block;
 }
 
-.heading1 {
-    color:skyblue;
+#middle {
+    width: 800px;
+    height: 800px;
+    margin: 20px;
+    background-color: #ffd9df ;
+    margin-left: auto;
+    margin-right: auto;
+    position: relative;
 }
 
-.heading2 {
-    color: rgb(255, 192, 203) ;
+#middle-child01 {
+    width: 200px;
+    height: 200px;
+    background-color: #87ceeb;
+    position: absolute;
+    top: 100px;
+    left: 100px;
 }
 
-#basic p {
-    font-weight: bold;
+#middle-child02 {
+    width: 200px;
+    height: 200px;
+    background-color: #87ceeb;
+    position: absolute;
+    top: 300px;
+    left: 300px;
+}
+
+#middle-child03 {
+    width: 200px;
+    height: 200px;
+    background-color: #87ceeb;
+    position: absolute;
+    top: 500px;
+    left: 500px;
+}
+
+#bottom {
+    width: 800px;
+    height: 300px;
+    background-color: #87ceeb;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+#bottom-child01 {
+    width: 400px;
+    height: 100px;
+    background-color: #e5dcf0;
+}
+
+#bottom-child02 {
+    width: 400px;
+    height: 100px;
+    background-color: #e5dcf0;
+    position: relative;
+    left: 200px;
+}
+
+#bottom-child03 {
+    width: 400px;
+    height: 100px;
+    background-color: #e5dcf0;
+    position: relative;
+    left: 400px;
 }
